@@ -4,6 +4,8 @@ Changelog
 1.0 (unreleased)
 ------------------
 
+- Bootstrap: convert dl form tabbing in Plone into accordions.
+  [davidjb]
 - Bootstrap: ensure form classes are themed. This allows form functionality
   that relies on classes (such as unload protection, KSS, etc).
   [davidjb]
